Layout korjaus (build:n minified ottaa pois <div ... /> elementit, joka sotkee layout:n. <div...></div> toimii ok)

--- a/app/views/kasittelija/hakemukset.html
+++ b/app/views/kasittelija/hakemukset.html
@@ -60,7 +60,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-md-8"/>
+            <div class="col-md-8"></div>
             <div class="col-md-4">
               <div class="pull-right">
                 <button class="btn btn-primary"
@@ -103,7 +103,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-md-8"/>
+            <div class="col-md-8"></div>
             <div class="col-md-4">
               <div class="pull-right">
                 <button class="btn btn-primary"
@@ -146,7 +146,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-md-8"/>
+            <div class="col-md-8"></div>
             <div class="col-md-4">
               <div class="pull-right">
                 <button class="btn btn-primary"
