--- a/app/views/hakija/hakemusEsikatselu.html
+++ b/app/views/hakija/hakemusEsikatselu.html
@@ -419,10 +419,10 @@
     </div>
     <div class="row">
       <div class="col-md-12">
-        <div ng-show="(avustushakemus.selite!=null)">
-          <p>{{avustushakemus.selite}}</p>
+        <div ng-show="(hakemus.selite!=null)">
+          <p>{{hakemus.selite}}</p>
         </div>
-        <div ng-show="(avustushakemus.selite==null)">
+        <div ng-show="(hakemus.selite==null)">
           <p>Ei selitettä.</p>
         </div>
       </div>
@@ -437,7 +437,7 @@
             <div ng-show="liitteet.length > 0" class="response">
               <div class="sel-file" ng-repeat="l in liitteet">
                 <p><i class="glyphicon glyphicon-file"></i>
-                  <a href="api/hakemus/{{avustushakemus.id}}/liite/{{l.liitenumero}}">{{l.nimi}} ({{l.contenttype}})</a>
+                  <a href="api/hakemus/{{hakemusid}}/liite/{{l.liitenumero}}">{{l.nimi}} ({{l.contenttype}})</a>
                 </p>
               </div>
             </div>
