--- a/app/views/kasittelija/hakemuskaudenHallinta.html
+++ b/app/views/kasittelija/hakemuskaudenHallinta.html
@@ -1,14 +1,14 @@
 <div class="container">
   <div class="row">
     <div class="col-md-3">
-      <a href="#/k/hakemukset" class="btn btn-primary">Avustushakemukset<span class="badge badge-notify">3</span></a>
+      <a href="#/k/hakemukset/AH0" class="btn btn-primary">Avustushakemukset<span class="badge badge-notify">3</span></a>
     </div>
     <div class="col-md-3">
-      <a href="#/k/hakemukset" class="btn btn-default disabled">1. maksatushakemukset<span
+      <a href="#/k/hakemukset/MH1" class="btn btn-primary">1. maksatushakemukset<span
         class="badge badge-notify">10</span></a>
     </div>
     <div class="col-md-3">
-      <a href="#/k/hakemukset" class="btn btn-default disabled">2. maksatushakemukset<span
+      <a href="#/k/hakemukset/MH2" class="btn btn-primary">2. maksatushakemukset<span
         class="badge badge-notify">10</span></a>
     </div>
     <div class="col-md-3">
