LIVIJUKU-144: Navigointi-bugeja korjattu

--- a/app/views/kasittelija/hakemus.html
+++ b/app/views/kasittelija/hakemus.html
@@ -492,11 +492,11 @@
       </div>
       <div class="col-md-6">
         <div ng-show="(hakemus.hakemustilatunnus == 'V')">
-          <button data-ng-click="tarkastaAvustushakemus()" class="pull-right btn btn-success">Merkitse tarkastetuksi
+          <button data-ng-click="tarkastaHakemus()" class="pull-right btn btn-success">Merkitse tarkastetuksi
           </button>
         </div>
         <div ng-hide="(hakemus.hakemustilatunnus == 'V')">
-          <button data-ng-click="tarkastaAvustushakemus()" class="pull-right btn btn-success" disabled>Merkitse
+          <button data-ng-click="tarkastaHakemus()" class="pull-right btn btn-success" disabled>Merkitse
             tarkastetuksi
           </button>
         </div>
