--- a/app/views/kasittelija/hakemuskaudenHallinta.html
+++ b/app/views/kasittelija/hakemuskaudenHallinta.html
@@ -1,15 +1,13 @@
 <div class="container">
   <div class="row">
     <div class="col-md-3">
-      <a href="#/k/hakemukset/AH0" class="btn btn-primary">Avustushakemukset<span class="badge badge-notify">3</span></a>
+      <a href="#/k/hakemukset/AH0" class="btn btn-primary">Avustushakemukset</a>
     </div>
     <div class="col-md-3">
-      <a href="#/k/hakemukset/MH1" class="btn btn-primary">1. maksatushakemukset<span
-        class="badge badge-notify">10</span></a>
+      <a href="#/k/hakemukset/MH1" class="btn btn-primary">1. maksatushakemukset</a>
     </div>
     <div class="col-md-3">
-      <a href="#/k/hakemukset/MH2" class="btn btn-primary">2. maksatushakemukset<span
-        class="badge badge-notify">10</span></a>
+      <a href="#/k/hakemukset/MH2" class="btn btn-primary">2. maksatushakemukset</a>
     </div>
     <div class="col-md-3">
       <a href="#/k/hakemuskaudenhallinta" class="btn btn-default">Hakemuskauden hallinta</a>
