--- a/app/views/hakija/hakemus.html
+++ b/app/views/hakija/hakemus.html
@@ -1,10 +1,16 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <a href="#/h/hakemukset"><span class='glyphicon glyphicon-circle-arrow-left'></span>Palaa hakemusten päänäkymään</a>
-      <a href="#/h/hakemus/{{hakemus.vuosi}}/AH0/{{avustushakemusid}}/{{maksatushakemus1id}}/{{maksatushakemus2id}}" class="btn btn-default">Avustushakemus {{hakemus.vuosi}}</a>
-      <a href="#/h/maksatushakemus/{{hakemus.vuosi}}/MH1/{{avustushakemusid}}/{{maksatushakemus1id}}/{{maksatushakemus2id}}" class="btn btn-primary">1. maksatushakemus {{hakemus.vuosi}}</a>
-      <a href="#/h/maksatushakemus/{{hakemus.vuosi}}/MH2/{{avustushakemusid}}/{{maksatushakemus1id}}/{{maksatushakemus2id}}" class="btn btn-primary">2. maksatushakemus {{hakemus.vuosi}}</a>
+      <a href="#/h/hakemukset"><span class='glyphicon glyphicon-circle-arrow-left'></span>Palaa hakemusten
+        päänäkymään</a>
+      <a href="#/h/hakemus/{{hakemus.vuosi}}/AH0/{{avustushakemusid}}/{{maksatushakemus1id}}/{{maksatushakemus2id}}"
+         class="btn btn-default">Avustushakemus {{hakemus.vuosi}}</a>
+      <a
+        href="#/h/maksatushakemus/{{hakemus.vuosi}}/MH1/{{avustushakemusid}}/{{maksatushakemus1id}}/{{maksatushakemus2id}}"
+        class="btn btn-primary">1. maksatushakemus {{hakemus.vuosi}}</a>
+      <a
+        href="#/h/maksatushakemus/{{hakemus.vuosi}}/MH2/{{avustushakemusid}}/{{maksatushakemus1id}}/{{maksatushakemus2id}}"
+        class="btn btn-primary">2. maksatushakemus {{hakemus.vuosi}}</a>
     </div>
   </div>
   <div class="row">
@@ -459,36 +465,38 @@
               </div>
             </div>
           </div>
-          <div class="row">
-            <div class="col-md-12">
-              <h5>Raitiotien suunnittelu</h5>
-            </div>
-            <div class="col-md-6">
-              <div class="form-group" show-errors="{showSuccess: true}">
-                <label>Haettava valtionavustus</label>
-                <input name="krthaettavaavustus" type="text" min="-0.0001" ng-currency="" class="form-control"
-                       ng-model="krthaettavaavustus" ui-validate="{positiivinenArvo: 'positiivinenArvo($value)'}"/>
-
-                <p
-                  ng-show="hakemusForm.krthaettavaavustus.$error.positiivinenArvo && !hakemusForm.krthaettavaavustus.$pristine"
-                  class="help-block">Arvon tulee olla positiivinen.</p>
+          <div ng-show="userOrganisaatioLajitunnus=='KS1'">
+            <div class="row">
+              <div class="col-md-12">
+                <h5>Raitiotien suunnittelu</h5>
               </div>
-            </div>
-            <div class="col-md-6">
-              <div class="form-group" show-errors="{showSuccess: true}">
-                <label>Kunnan oma rahoitusosuus</label>
-                <input name="krtomarahoitus" type="text" min="-0.0001" ng-currency="" class="form-control"
-                       ng-model="krtomarahoitus"
-                       ui-validate="{omarahoitusRiittava: 'omarahoitusRiittava($value,krthaettavaavustus)',positiivinenArvo: 'positiivinenArvo($value)'}"
-                       ui-validate-watch=" 'krthaettavaavustus' "/>
+              <div class="col-md-6">
+                <div class="form-group" show-errors="{showSuccess: true}">
+                  <label>Haettava valtionavustus</label>
+                  <input name="krthaettavaavustus" type="text" min="-0.0001" ng-currency="" class="form-control"
+                         ng-model="krthaettavaavustus" ui-validate="{positiivinenArvo: 'positiivinenArvo($value)'}"/>
 
-                <p
-                  ng-show="hakemusForm.krtomarahoitus.$error.positiivinenArvo && !hakemusForm.krtomarahoitus.$pristine"
-                  class="help-block">Arvon tulee olla positiivinen.</p>
+                  <p
+                    ng-show="hakemusForm.krthaettavaavustus.$error.positiivinenArvo && !hakemusForm.krthaettavaavustus.$pristine"
+                    class="help-block">Arvon tulee olla positiivinen.</p>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-group" show-errors="{showSuccess: true}">
+                  <label>Kunnan oma rahoitusosuus</label>
+                  <input name="krtomarahoitus" type="text" min="-0.0001" ng-currency="" class="form-control"
+                         ng-model="krtomarahoitus"
+                         ui-validate="{omarahoitusRiittava: 'omarahoitusRiittava($value,krthaettavaavustus)',positiivinenArvo: 'positiivinenArvo($value)'}"
+                         ui-validate-watch=" 'krthaettavaavustus' "/>
 
-                <p
-                  ng-show="hakemusForm.krtomarahoitus.$error.omarahoitusRiittava && !hakemusForm.krtomarahoitus.$pristine"
-                  class="help-block">Oma rahoitusosuus tulee olla vähintään haettavan avustusosuuden suuruinen.</p>
+                  <p
+                    ng-show="hakemusForm.krtomarahoitus.$error.positiivinenArvo && !hakemusForm.krtomarahoitus.$pristine"
+                    class="help-block">Arvon tulee olla positiivinen.</p>
+
+                  <p
+                    ng-show="hakemusForm.krtomarahoitus.$error.omarahoitusRiittava && !hakemusForm.krtomarahoitus.$pristine"
+                    class="help-block">Oma rahoitusosuus tulee olla vähintään haettavan avustusosuuden suuruinen.</p>
+                </div>
               </div>
             </div>
           </div>
@@ -563,12 +571,12 @@
               <div ng-show="liitteet.length > 0" class="response">
                 <div class="sel-file" ng-repeat="l in liitteet">
                   <div ng-show="(hakemus.hakemustilatunnus == 'K')">
-                  <p><i class="glyphicon glyphicon-file"></i>
-                    <a href="api/hakemus/{{hakemusid}}/liite/{{l.liitenumero}}">{{l.nimi}}
-                      ({{l.contenttype}})</a>
-                    <a href="" ng-click="poistaLiite(l.liitenumero)"><span
-                      class='glyphicon glyphicon-remove-sign'></span></a>
-                  </p>
+                    <p><i class="glyphicon glyphicon-file"></i>
+                      <a href="api/hakemus/{{hakemusid}}/liite/{{l.liitenumero}}">{{l.nimi}}
+                        ({{l.contenttype}})</a>
+                      <a href="" ng-click="poistaLiite(l.liitenumero)"><span
+                        class='glyphicon glyphicon-remove-sign'></span></a>
+                    </p>
                   </div>
                   <div ng-hide="(hakemus.hakemustilatunnus == 'K')">
                     <p><i class="glyphicon glyphicon-file"></i>
