--- a/app/styles/juku.css
+++ b/app/styles/juku.css
@@ -1,11 +1,9 @@
-html
-{
+html {
   position: relative;
   min-height: 100%;
 }
 
-body
-{
+body {
   margin-bottom: 90px;
 }
 
@@ -15,85 +13,87 @@ body
   width: 100%;
   height: 60px;
   background-color: #0088cc;
-  background: #0088cc; /* Old browsers */ background: -moz-linear-gradient(top,  #0088cc 0%, #005196 100%); /* FF3.6+ */ background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#0088cc), color-stop(100%,#005196)); /* Chrome,Safari4+ */ background: -webkit-linear-gradient(top,  #0088cc 0%,#005196 100%); /* Chrome10+,Safari5.1+ */ background: -o-linear-gradient(top,  #0088cc 0%,#005196 100%); /* Opera 11.10+ */ background: -ms-linear-gradient(top,  #0088cc 0%,#005196 100%); /* IE10+ */ background: linear-gradient(to bottom,  #0088cc 0%,#005196 100%); /* W3C */ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0088cc', endColorstr='#005196',GradientType=0 ); /* IE6-9 */   border-radius: 0px;;
+  background: #0088cc; /* Old browsers */
+  background: -moz-linear-gradient(top, #0088cc 0%, #005196 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #0088cc), color-stop(100%, #005196)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, #0088cc 0%, #005196 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, #0088cc 0%, #005196 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, #0088cc 0%, #005196 100%); /* IE10+ */
+  background: linear-gradient(to bottom, #0088cc 0%, #005196 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0088cc', endColorstr='#005196', GradientType=0); /* IE6-9 */
+  border-radius: 0px;;
 }
 
 /* Fixed navbar styles */
 
-.alaviiva
-{
+.alaviiva {
   margin-bottom: 20px;
   border-bottom: 1px solid #dddddd;
   padding-top: 25px;
 }
 
-textarea
-{
+textarea {
   width: 100%;
 }
 
 .navbar {
   background: #0088cc; /* Old browsers */
-  background: -moz-linear-gradient(top,  #0088cc 0%, #005196 100%); /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#0088cc), color-stop(100%,#005196)); /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top,  #0088cc 0%,#005196 100%); /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top,  #0088cc 0%,#005196 100%); /* Opera 11.10+ */
-  background: -ms-linear-gradient(top,  #0088cc 0%,#005196 100%); /* IE10+ */
-  background: linear-gradient(to bottom,  #0088cc 0%,#005196 100%); /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0088cc', endColorstr='#005196',GradientType=0 ); /* IE6-9 */
+  background: -moz-linear-gradient(top, #0088cc 0%, #005196 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #0088cc), color-stop(100%, #005196)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, #0088cc 0%, #005196 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, #0088cc 0%, #005196 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, #0088cc 0%, #005196 100%); /* IE10+ */
+  background: linear-gradient(to bottom, #0088cc 0%, #005196 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0088cc', endColorstr='#005196', GradientType=0); /* IE6-9 */
   border-radius: 0px;
 
 }
 
-.navbaruser{
+.navbaruser {
   border-left: 1px solid #ffffff;
+  line-height: 1;
+  padding-top: 5px;
+  padding-bottom: 0px;
+  padding-left: 3px;
 }
 
-.navbartxt
-{
+.navbartxt {
   color: #ffffff !important;
 }
 
-.suunnitteluheader
-{
+.suunnitteluheader {
   font-size: 18px;
   margin-bottom: 20px;
   text-transform: uppercase;
   padding-top: 20px;
 }
 
-.footer
-{
+.footer {
   margin-bottom: 0px;
   padding-top: 10px;
   padding-bottom: 20px;
 }
 
-.logoalign
-{
+.logoalign {
   position: relative;
   top: -8px;
   left: -10px;
 }
 
-.r-align
-{
+.r-align {
   text-align: right;
 }
 
-.footerlogo
-{
+.footerlogo {
   position: relative;
   left: -30px;
 }
 
-.bodypadding
-{
+.bodypadding {
   padding-top: 70px;
 }
 
-.footerwspace
-{
+.footerwspace {
   position: relative;
   height: 20px;
   background-color: #ffffff;
@@ -110,7 +110,21 @@ textarea
   margin-left: 20px;
 }
 
-.uusihakemuskausi{
+.hakija {
+  background-color: #EEEEEE;
+  line-height: 1;
+  font-size: 14px;
+  margin-bottom: 15px;
+  padding: 15px;
+}
+.hakijaotsake {
+  font-weight: bold;
+  background-color: #EEEEEE;
+  font-size: 14px;
+  margin-bottom: 10px;
+}
+
+.uusihakemuskausi {
   border-style: dashed;
   border-width: 4px;
   border-radius: 4px;
@@ -120,10 +134,10 @@ textarea
   padding: 20px;
 }
 
-.badge.badge-notify{
-  background:red;
-  color:white;
-  position:relative;
+.badge.badge-notify {
+  background: red;
+  color: white;
+  position: relative;
   top: -20px;
   left: 20px;
 }
@@ -137,18 +151,16 @@ textarea
   cursor: pointer;
 }
 
-.jukutooltip
-{
-    margin-left: 10px;
+.jukutooltip {
+  margin-left: 10px;
 }
 
-.headertxtselected
-{
-    background-color: #afa1a1;
-    border-radius: 6px 6px 0px 0px;
-    top: 5px;
-    height: 45px;
-    color: #ffffff;
+.headertxtselected {
+  background-color: #afa1a1;
+  border-radius: 6px 6px 0px 0px;
+  top: 5px;
+  height: 45px;
+  color: #ffffff;
 }
 
 .vcenter {
