--- a/app/views/hakija/maksatusHakemus.html
+++ b/app/views/hakija/maksatusHakemus.html
@@ -11,6 +11,12 @@
         <a
           href="#/h/maksatushakemus/{{hakemus.vuosi}}/MH2/{{avustushakemusid}}/{{maksatushakemus1id}}/{{maksatushakemus2id}}"
           class="btn btn-primary">2. maksatushakemus {{hakemus.vuosi}}</a>
+
+        <div class="row">
+          <div class="col-md-12">
+            <h2>Joukkoliikenten 1.maksatushakemus {{vuosi}}</h2>
+          </div>
+        </div>
       </div>
       <div ng-show="(tyyppi == 'MH2')">
         <a href="#/h/hakemukset"><span class='glyphicon glyphicon-circle-arrow-left'></span>Palaa hakemusten päänäkymään</a>
@@ -22,89 +28,71 @@
         <a
           href="#/h/maksatushakemus/{{hakemus.vuosi}}/MH2/{{avustushakemusid}}/{{maksatushakemus1id}}/{{maksatushakemus2id}}"
           class="btn btn-default">2. maksatushakemus {{hakemus.vuosi}}</a>
+
+        <div class="row">
+          <div class="col-md-12">
+            <h2>Joukkoliikenten 2.maksatushakemus {{vuosi}}</h2>
+          </div>
+        </div>
       </div>
     </div>
   </div>
   <div class="row">
     <div class="col-md-12">
-      <h2>Joukkoliikenten valtionavun maksatushakemus ajalta {{ajankohta}}{{vuosi}}</h2>
+      <h3>HAKIJAN TIEDOT ({{hakija}})</h3>
     </div>
   </div>
   <div class="row">
-    <div class="col-md-12">
-      <h3>HAKIJAN TIEDOT</h3>
+    <div class="col-md-6">
+      <div class="hakija">
+        <div class="hakijaotsake">Hakija</div>
+
+        <p>Puuttuu</p>
+
+        <p>Puuttuu</p>
+
+        <p>Puuttuu</p>
+
+        <p>Puuttuu</p>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="hakija">
+        <div class="hakijaotsake">Hakija</div>
+
+        <p>Puuttuu</p>
+
+        <p>Puuttuu</p>
+
+        <p>Puuttuu</p>
+
+        <p>Puuttuu</p>
+      </div>
     </div>
   </div>
   <div class="row">
-    <div class="col-md-3">
-      <h4>Kunnan nimi</h4>
+    <div class="col-md-6">
+      <div class="hakija">
+        <div class="hakijaotsake">Allekirjoittaja</div>
 
-      <p>{{hakija}}</p>
-      <h4>Pankkitilin numero</h4>
+        <p>Puuttuu</p>
 
-      <p>{{pankkitilinumero}}</p>
+        <p>Puuttuu</p>
+
+        <p>Puuttuu</p>
+
+        <p>Puuttuu</p>
+      </div>
     </div>
-    <div class="col-md-3">
-      <h4>Hakijat</h4>
-
-      <p>Puuttuu</p>
-
-      <p>Puuttuu</p>
-
-      <p>Puuttuu</p>
-
-      <p>Puuttuu</p>
-    </div>
-    <div class="col-md-3">
-      <br>
-
-      <p>Puuttuu</p>
-
-      <p>Puuttuu</p>
-
-      <p>Puuttuu</p>
-
-      <p>Puuttuu</p>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-3"></div>
-    <div class="col-md-3">
-      <br>
-      <h4>Päätöksentekijä</h4>
-
-      <p>Puuttuu</p>
-
-      <p>Puuttuu</p>
-
-      <p>Puuttuu</p>
-
-      <p>Puuttuu</p>
-    </div>
+    <div class="col-md-6"></div>
   </div>
   <div ng-show="paatos!=null">
     <div class="row">
       <div class="col-md-12">
-        <h3>MYÖNNETTY AVUSTUS</h3>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-3">
-        <h4>Päätösnumero:{{paatos.paatosnumero}} ({{paatos.voimaantuloaika | date:'dd.MM.yyyy'}}) :</h4>
-      </div>
-      <div class="col-md-9">
-        <h4><b>{{paatos.myonnettyavustus | currency:"&euro;"}}</b></h4>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-3">
-        <h4>Haettava avustussumma:</h4>
-      </div>
-      <div class="col-md-9">
-        <h4><b>{{(psa1haettavaavustus + psa2haettavaavustus + psamhaettavaavustus + hkslhaettavaavustus +
-          hkklhaettavaavustus + hkllhaettavaavustus +
-          hktlhaettavaavustus + kimhaettavaavustus + kmpkhaettavaavustus + kmkhaettavaavustus +
-          krthaettavaavustus + kmhaettavaavustus) | currency:"&euro;"}}</b></h4>
+        <h3>MYÖNNETTY AVUSTUS AJALLE {{ajankohta}}{{vuosi}}: <b>{{paatos.myonnettyavustus/2 | currency:"&euro;"}}</b><a
+          href="" class="top" title="" data-toggle="tooltip" data-placement="top"
+          data-original-title="Avustus vuodelle {{vuosi}}: {{paatos.myonnettyavustus| currency:'&euro;'}}"><span
+          class='jukutooltip glyphicon glyphicon-question-sign'></span></a></h3>
       </div>
     </div>
   </div>
@@ -112,7 +100,7 @@
     <form name="hakemusForm">
       <div class="row">
         <div class="col-md-12">
-          <h3>VALTIONAVUSTUKSEN KOHDE JA HAETTAVA VALTIONAVUSTUKSEN MÄÄRÄ<a href=""><span
+          <h3>HAETTAVAT MAKSATUKSET AJALLE {{ajankohta}}{{vuosi}}<a href=""><span
             class='jukutooltip glyphicon glyphicon-question-sign'></span></a></h3>
         </div>
       </div>
@@ -706,7 +694,7 @@
       </div>
       <div class="row">
         <div class="col-md-9">
-          <h4>JOUKKOLIIKENTEEN VALTIONAVUSTUSHAKEMUS YHTEENSÄ:</h4>
+          <h4>HAETTAVAT MAKSATUKSET YHTEENSÄ:</h4>
         </div>
         <div class="col-md-3">
           <div class="pull-right">
@@ -717,87 +705,82 @@
           </div>
         </div>
       </div>
-      <div class="form-group">
-        <div class="row">
-          <div class="col-md-12">
-            <label>Lisätietoja avustusten kohteista<a href=""><span
-              class='jukutooltip glyphicon glyphicon-question-sign'></span></a></label>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12">
-            <textarea class="animate msd-elastic: \n;" ng-model="hakemus.selite"></textarea>
-          </div>
+      <div class="row">
+        <div class="col-md-12">
+          <h3>KULUTOSITTEET AJALLE {{ajankohta}}{{vuosi}}<a href=""><span
+            class='jukutooltip glyphicon glyphicon-question-sign'></span></a></h3>
         </div>
       </div>
       <div class="row">
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <h2 class="panel-title">Liitetiedostot</h2>
-          </div>
-          <div class="panel-body">
-            <div class="col-md-8">
-              <div ng-show="liitteet.length > 0" class="response">
-                <div class="sel-file" ng-repeat="l in liitteet">
-                  <div ng-show="(hakemus.hakemustilatunnus == 'K')">
-                    <p><i class="glyphicon glyphicon-file"></i>
-                      <a href="api/hakemus/{{hakemusid}}/liite/{{l.liitenumero}}">{{l.nimi}}
-                        ({{l.contenttype}})</a>
-                      <a href="" ng-click="poistaLiite(l.liitenumero)"><span
-                        class='glyphicon glyphicon-remove-sign'></span></a>
-                    </p>
-                  </div>
-                  <div ng-hide="(hakemus.hakemustilatunnus == 'K')">
-                    <p><i class="glyphicon glyphicon-file"></i>
-                      <a href="api/hakemus/{{hakemusid}}/liite/{{l.liitenumero}}">{{l.nimi}}
-                        ({{l.contenttype}})</a>
-                    </p>
-                  </div>
-                  <!--
-                                        <img ng-show="f.dataUrl" ng-src="{{f.dataUrl}}" class="thumb"/>
-                                        <span class="progress" ng-show="f.progress >= 0">
-                                                    <div style="width:{{f.progress}}%">{{f.progress}}%</div>
-                                                </span>
-                                        <button class="button" ng-click="f.upload.abort();f.upload.aborted=true"
-                                                ng-show="f.upload != null && f.progress < 100 && !f.upload.aborted">Abort
-                                        </button>
-                                        {{f.name}} - size: {{f.size}}B - type: {{f.type}}
-                                        <a ng-show="f.result" href="javascript:void(0)"
-                                           ng-click="f.showDetail = !f.showDetail">details</a>
+        <div class="col-md-12">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h2 class="panel-title">Liitetiedostot</h2>
+            </div>
+            <div class="panel-body">
+              <div class="col-md-8">
+                <div ng-show="liitteet.length > 0" class="response">
+                  <div class="sel-file" ng-repeat="l in liitteet">
+                    <div ng-show="(hakemus.hakemustilatunnus == 'K')">
+                      <p><i class="glyphicon glyphicon-file"></i>
+                        <a href="api/hakemus/{{hakemusid}}/liite/{{l.liitenumero}}">{{l.nimi}}
+                          ({{l.contenttype}})</a>
+                        <a href="" ng-click="poistaLiite(l.liitenumero)"><span
+                          class='glyphicon glyphicon-remove-sign'></span></a>
+                      </p>
+                    </div>
+                    <div ng-hide="(hakemus.hakemustilatunnus == 'K')">
+                      <p><i class="glyphicon glyphicon-file"></i>
+                        <a href="api/hakemus/{{hakemusid}}/liite/{{l.liitenumero}}">{{l.nimi}}
+                          ({{l.contenttype}})</a>
+                      </p>
+                    </div>
+                    <!--
+                                          <img ng-show="f.dataUrl" ng-src="{{f.dataUrl}}" class="thumb"/>
+                                          <span class="progress" ng-show="f.progress >= 0">
+                                                      <div style="width:{{f.progress}}%">{{f.progress}}%</div>
+                                                  </span>
+                                          <button class="button" ng-click="f.upload.abort();f.upload.aborted=true"
+                                                  ng-show="f.upload != null && f.progress < 100 && !f.upload.aborted">Abort
+                                          </button>
+                                          {{f.name}} - size: {{f.size}}B - type: {{f.type}}
+                                          <a ng-show="f.result" href="javascript:void(0)"
+                                             ng-click="f.showDetail = !f.showDetail">details</a>
 
-                                        <div ng-show="f.showDetail">
-                                          <br/>
+                                          <div ng-show="f.showDetail">
+                                            <br/>
 
-                                          <div data-ng-show="f.result.result == null">{{f.result}}</div>
-                                          <ul>
-                                            <li ng-repeat="item in f.result.result">
-                                              <div data-ng-show="item.name">file name: {{item.name}}</div>
-                                              <div data-ng-show="item.fieldName">name: {{item.fieldName}}</div>
-                                              <div data-ng-show="item.size">size on the serve: {{item.size}}</div>
-                                              <div data-ng-show="item.value">value: {{item.value}}</div>
-                                            </li>
-                                          </ul>
-                                          <div data-ng-show="f.result.requestHeaders" class="reqh">request headers:
-                                            {{f.result.requestHeaders}}
+                                            <div data-ng-show="f.result.result == null">{{f.result}}</div>
+                                            <ul>
+                                              <li ng-repeat="item in f.result.result">
+                                                <div data-ng-show="item.name">file name: {{item.name}}</div>
+                                                <div data-ng-show="item.fieldName">name: {{item.fieldName}}</div>
+                                                <div data-ng-show="item.size">size on the serve: {{item.size}}</div>
+                                                <div data-ng-show="item.value">value: {{item.value}}</div>
+                                              </li>
+                                            </ul>
+                                            <div data-ng-show="f.result.requestHeaders" class="reqh">request headers:
+                                              {{f.result.requestHeaders}}
+                                            </div>
                                           </div>
-                                        </div>
-                                        -->
+                                          -->
+                  </div>
                 </div>
               </div>
-            </div>
 
-            <div ng-show="(hakemus.hakemustilatunnus == 'K')">
-              <div class="col-md-4 text-center">
-                <div ng-file-drop ng-model="myFiles" class="drop-box"
-                     drag-over-class="{accept:'dragover', reject:'dragover-err', delay:100}"
-                     multiple="true" allow-dir="true">
-                  <p>Raahaa liite tähän</p>
+              <div ng-show="(hakemus.hakemustilatunnus == 'K')">
+                <div class="col-md-4 text-center">
+                  <div ng-file-drop ng-model="myFiles" class="drop-box"
+                       drag-over-class="{accept:'dragover', reject:'dragover-err', delay:100}"
+                       multiple="true" allow-dir="true">
+                    <p>Raahaa liite tähän</p>
 
-                  <p>tai</p>
+                    <p>tai</p>
 
-                  <div ng-no-file-drop>Tiedoston raahaaminen ei ole mahdollista tällä selain-versiolla</div>
-                  <button ng-file-select class="btn btn-primary" ng-model="myFiles" multiple="true">Valitse tiedosto
-                  </button>
+                    <div ng-no-file-drop>Tiedoston raahaaminen ei ole mahdollista tällä selain-versiolla</div>
+                    <button ng-file-select class="btn btn-primary" ng-model="myFiles" multiple="true">Valitse tiedosto
+                    </button>
+                  </div>
                 </div>
               </div>
             </div>
@@ -826,14 +809,14 @@
       </div>
       <div class="row">
         <div class="col-md-12">
-          <h3>HAKEMUKSEN PÄIVÄMÄÄRÄ JA PÄÄTÖKSENTEKIJÄ</h3>
+          <h3>HAKEMUKSEN PÄIVÄMÄÄRÄ JA ALLEKIRJOITTAJA</h3>
         </div>
       </div>
       <div class="row">
         <div class="col-md-12">
           <h4>Oikeudet hakemuksen lähettämiseen on käyttäjillä, joka toimivat organisaatiossa hakemuksen hyväksyjinä
             ja
-            päätöksentekijöinä.</h4>
+            allekirjoittajina.</h4>
         </div>
       </div>
       <div class="row">
@@ -843,9 +826,9 @@
           <p>{{aikaleima | date:'dd.MM.yyyy'}}</p>
         </div>
         <div class="col-md-6">
-          <h5>Päätöksentekijä</h5>
+          <h5>Allekirjoittaja</h5>
 
-          <p>_kirjautuneen päätöksentekijän nimi_</p>
+          <p>_kirjautuneen allekirjoittajan nimi_</p>
         </div>
       </div>
       <div class="row">
